--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,17 @@
 /.pnp
 .pnp.js
 
+.cache
 # testing
 /coverage
 
 # production
 /build
-/storybook-static
 
 # misc
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
