--- a/marvel-comics-react-app/package.json
+++ b/marvel-comics-react-app/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.4",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "crypto-js": "^3.1.9-1",
-    "live-server": "^1.2.1"
+    "typescript": "3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,11 +32,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-test-renderer": "^16.9.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.6.2"
   }
 }
